--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Andre Koloda",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.25.3"
   }
 }
